# AI-project-manager-Assistant

./: .gitignore  ARCHITECTURE.md  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 6b8ef9dee0ec_create_meetings_and_tasks_tables.py
backend/app/: main.py
backend/app/ai/: base.py  constants.py  factory.py  fallback.py  gemini_provider.py  groq_provider.py  retry.py
backend/app/core/: config.py  enums.py  exceptions.py  logging.py  responses.py
backend/app/core/constants/: defaults.py  limits.py  messages.py
backend/app/db/: base.py  repository.py  session.py
backend/app/features/extraction/: exceptions.py  normalizer.py  parser.py  prompts.py  schemas.py  service.py
backend/app/features/meetings/: models.py  repository.py  router.py  schemas.py  service.py  validators.py
backend/app/features/tasks/: models.py  repository.py  router.py  schemas.py  service.py
frontend/: README.md  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: apiTypes.ts  axiosClient.ts  getApiErrorMessage.ts  meetings.api.ts  tasks.api.ts
frontend/src/components/Badge/: Badge.module.css  Badge.tsx
frontend/src/components/Button/: Button.module.css  Button.tsx
frontend/src/components/ConfirmDialog/: ConfirmDialog.module.css  ConfirmDialog.tsx
frontend/src/constants/: apiRoutes.ts  taskLabels.ts
frontend/src/features/tasks/: types.ts  (+1 more)
frontend/src/theme/: tokens.css
frontend/src/types/: enums.ts
(+39 files in other folders)
