[project]
name = "mini-ai-project-manager-backend"
version = "0.1.0"
description = "Backend for the Mini AI Project Manager Assistant"
requires-python = ">=3.12"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
